# poetry-poc

./: README.md  docker-compose.yml  main.py  pyproject.toml  test_anosql.py
db/: ddl.pgsql  get_random_messages.pgsql
domain/security/command/: login.py
node_client/: index.js  openapi.json  package.json
