[tool.poetry]
name = "poetry-poc"
version = "0.1.0"
description = ""
authors = ["Jonathan Nacionales <jnaciona@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = {extras = ["all"], version = "^0.59.0"}
requests = "^2.24.0"
anosql = "^1.0.2"
fastapi_utils = "^0.2.1"
psycopg2 = "^2.8.5"
psycopg2-binary = "^2.8.5"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
